--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  background-color: rgba(128, 128, 128, 0.226);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
