working on learners profile

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* .user{
+  width: 90%;
+  background-color: red;
+} */
+/* .user i{
+  margin-left: 5px;
+} */
