--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  background-color: rgba(128, 128, 128, 0.226);
+  background-color: #cbcbcba3;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -23,6 +23,6 @@ code {
   width: 90%;
   background-color: red;
 } */
-/* .user i{
+/* .user i
   margin-left: 5px;
 } */
