--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* .user{
-  width: 90%;
-  background-color: red;
-} */
-/* .user i
-  margin-left: 5px;
-} */
+.nav{
+  color: grey;
+  text-decoration: none;
+}
